styles/slider.css
.slider-nav {
  z-index: 999;
  cursor: pointer;
  position: absolute;
}

.slider-nav a {
  display: block;
  width: 150px;
  margin: 1em 0;
  border: none;
  background: rgba(0, 0, 0, 0.3);
  text-align: right;
  padding: 0 1em;
  box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
}

.slider-nav a.active {
  background: white;
}

.slider-container {
  position: absolute;
  top: 0px;
  left: 200px;
  overflow: hidden;
  /* display: flex;
  display: -webkit-flex;
  display: -moz-flex;
  display: -ms-flex;
  -webkit-flex-flow: row wrap;
  -moz-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  -o-flex-flow: row wrap;
  flex-flow: row wrap;
  -webkit-justify-content: flex-start;
  -moz-justify-content: flex-start;
  -ms-justify-content: flex-start;
  -o-justify-content: flex-start;
  justify-content: flex-start; */
  height: 100%;
  min-height: 100%;
  width: calc(100-200px);
  z-index: 1;
}

.slider-container .flex-active {
  z-index: 2;
}

.slider-subheading {
  font-size: 12px;
  letter-spacing: 0.5rem;
  text-transform: uppercase;
  margin: 40px 0;
}

.text-background {
  left: 72px;
  bottom: -60px;
  color: rgba(0, 0, 0, 0.05);
  font-size: 170px;
  font-weight: 700;
}

.flex-item {
  color: #fff;
  height: 100%;
  min-height: 100%;
  transition: transform 0.1s linear;
  -webkit-transition: transform 0.1s linear;
  -moz-transition: transform 0.1s linear;
  -ms-transition: transform 0.1s linear;
  -o-transition: transform 0.1s linear;
}

.flex-item-left {
  display: flex;
  display: -webkit-flex;
  display: -moz-flex;
  display: -ms-flex;
  transform-origin: left bottom;
  transition: transform 0.1s linear;
  -webkit-transition: transform 0.1s linear;
  -moz-transition: transform 0.1s linear;
  -ms-transition: transform 0.1s linear;
  -o-transition: transform 0.1s linear;
  opacity: 0;
  width: 80% !important;
}

.flex-before .flex-item-left,
.flex-active .flex-item-left {
  opacity: 1;
  width: 87vw;
}

.flex-active {
  width: 87%;
  overflow-y: auto;
  z-index: 5;
}

.flex-content {
  opacity: 1;
  transform: translate3d(0, 0, 0);
  transition: transform 0.2s linear 0.2s, opacity 0.5s linear 0.2s;
  -webkit-transition: transform 0.2s linear 0.2s, opacity 0.5s linear 0.2s;
  -moz-transition: transform 0.2s linear 0.2s, opacity 0.5s linear 0.2s;
  -ms-transition: transform 0.2s linear 0.2s, opacity 0.5s linear 0.2s;
  -o-transition: transform 0.2s linear 0.2s, opacity 0.5s linear 0.2s;
  padding: 10%;
  width: 100%;
}

/* Animate-START point */

.slider-container.animate--start .flex-content {
  transform: translate3d(87vw, -200%, 0);
  opacity: 0;
}

/* Animate-END point */

.slider-container.animate--end .flex-item-left {
  transform: scaleY(0);
}

.slider-container.animate--end .flex-item-right {
  transform: scaleY(0);
}

.slider-container.animate--end .flex-content {
  transform: translate3d(87vw, 200%, 0);
  opacity: 0;
}

@media only screen and (max-width: 1100px) {
  .flex-item-left {
    width: 100% !important;
  }

  .flex-before .flex-item-left,
  .flex-active .flex-item-left {
    width: 77vw;
  }

  .flex-active {
    width: 77%;
    overflow-y: auto;
    z-index: 5;
  }

  .slider-container.animate--start .flex-content {
    transform: translate3d(77vw, -200%, 0);
    opacity: 0;
  }

  .slider-container.animate--end .flex-content {
    transform: translate3d(77vw, 200%, 0);
    opacity: 0;
  }

  .slider-nav {
    height: auto;
    position: fixed;
    top: 42px;
    width: 100%;
    display: flex;
    flex-direction: row;
  }

  .slider-container {
    left: 0;
    top: 0px;
    width: 100%;
    height: auto;
  }

  .slider-subheading {
    margin-top: 100px;
  }

  .slider-nav a {
    width: 50%;
    background: black;
  }
}

